# news

./: .env.example  .gitignore  CLAUDE.md  README.md  get_news.py  pyproject.toml  requirements.txt  test_auto_classify.py
ai/: README.md
ai/training/: README.md  analysis.py
ai/training/embeddings/: controlled_ratios.py  simple.py
ai/training/loaders/: category_loader.py
benchmarks/: lsh.py
commands/: __init__.py
db/: __init__.py  database.py  models.py
docs/: ai-assisted-classification.md  architecture.md  auto-classification.md  cache.md  commands.md  database.md  email.md  extractors.md  flash_news_relevance.md  processing.md
docs/prompting/engineering/: 0-overview.md  1-prompt-templates-and-variables.md  2-be-clear-and-direct.md  3-multishot-prompting.md  4-chain-of-thought.md  5-use-xml-tags.md  6-system-prompts.md  7-chain-prompts.md  8-long-context-tips.md
docs/prompting/test-and-evaluate/: 1-define-success.md  3-eval-tool.md  4-reduce-latency.md
docs/recommendation-system/: news-analysis-factors.md  news-analysis-tools.md
extractors/: __init__.py  html_to_markdown.py
scripts/: test_auto_classify.py
src/: cli.py  get_news.py  settings.py
src/commands/: article.py  cache.py  domain.py  email.py  entity.py  export.py  flash.py  llm.py  process.py
src/db/: __init__.py  cache.py  database.py  export.py  models.py
src/domain/: calculate_flash_news_relevance.py  calculate_global_relevance.py  entity_rank.py
src/email_system/: __init__.py  client.py  logging.py  renderer.py  service.py
src/email_system/templates/: newsletter.html.jinja  newsletter.txt.jinja  test.html.jinja  test.txt.jinja
src/extractors/: base.py  diariolibre_com.py  html_to_markdown.py  markdown_to_txt.py
src/llm/: __init__.py  logging.py  openai_client.py
src/llm/prompts/: __init__.py  article_analysis.py  article_analysis_system_prompt.md.jinja  article_analysis_user_prompt.md.jinja  (+9 more)
src/processors/: __init__.py  article_analysis.py  auto_classify.py  clustering.py  enrich.py  entity_ai_classification.py  entity_lsh_matcher.py  flash_news.py  pre_process.py  tokenization.py
