[project]
name = "news"
version = "0.1.0"
description = "News portal - Extract, process and publish news summaries"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "sqlalchemy>=2.0.44",
    "click==8.3.0",
    "spacy==3.8.9",
]

[project.urls]
Homepage = "https://github.com/kennylajara/news"
Repository = "https://github.com/kennylajara/news"

[project.scripts]
news = "cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build]
packages = ["src"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
